@@ -1211,6 +1211,13 @@ Summary:
    module specifically enabled it with
    :option:`/*verilator&32;inline_module*/`.
 
+
+.. option:: --public-depth <level>
+
+   Enables public as with :vlopt:`--public-flat-rw`, but only to the specified depth of modules.
+   It operates at the module maximum level, so if a module's cells are A.B.X and A.X, the
+   a --public-depth 3 must be used to make module X public, and both A.B.X and A.X will be public.
+
 .. option:: --public-flat-rw
 
    Declares all variables, ports, and wires public as if they had
@@ -1222,17 +1229,19 @@ Summary:
    marking only those signals that need public_flat_rw is typically
    significantly better performing.
 
-.. option:: --public-depth <level>
+.. option:: --public-ignore
 
-   Enables public as with :vlopt:`--public-flat-rw`, but only to the specified depth of modules.
-   It operates at the module maximum level, so if a module's cells are A.B.X and A.X, the
-   a --public-depth 3 must be used to make module X public, and both A.B.X and A.X will be public.
+   Ignore all :code:`/*verilator public* */` metacomments. This is useful
+   for speed-optimizing VPI builds where VPI is not being used.  This only
+   affects metacomments; options such as :vlopt:`--public`,
+   :vlopt:`--public-depth`, etc. work normally.
 
 .. option:: --public-params
 
    Declares all parameters public as if they had
    :code:`/*verilator public_flat_rd*/`
    metacomments.
+
 
 .. option:: -pvalue+<name>=<value>
 
